# caveman-prompts

./: .gitignore  README.md  pyproject.toml
caveman/: __init__.py  compressor.py  nlp.py  report.py  rules.py  sacred.py
cli/: main.py
examples/: basic_usage.py
tests/: regression_1000.py  test_cli.py  test_compressor.py  test_sacred.py
