[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caveman-prompts"
version = "0.1.0"
description = "Compress LLM prompts to their caveman essence"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = ["click>=8.0", "spacy>=3.0", "tiktoken>=0.7"]

[project.scripts]
caveman = "cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["caveman*", "cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
